' Generated by UML Generator
' Encoded: ZLJ1Rjim3BtxAmJaaY19aVLeT4KB5mjos30qmww38h6ELbao96heLdJVFig9RTdEi5q4K7oFf1v9tNda3aEbC_-iJCqThvZGtFjxHASE0M4dhDchNy0ssL59O48veI7B6XIxbvNoNbbJ744yWxjchnbZirSAYqgyiQ_WrDFF7kKKqWsVUvcpFGO91XyuykiLmwC3VxIQ7DA6WuP5pWxMQk0cUslJ5JOu3u_mTCgpDho26CWfKqPRM3cq7KY5FcVAOBJNT2px8FEKls8fcwo4kuYy4l0JuUUB94EyB8YMN7R5RXsNi3CU74w5KSrz0xaWXiYJfwvO6M6dGdBsmohP9qbv9qsGlpm4Q5MCDmsT7lAHrpVjwtO6eGHt6_rATWBvuCQQZksovadmtxu6eRZ-x2obgRfEzyrhPKyhdPzJhjWeuOgbLfHzbYerxD1K5e9JGxOrZ_teQbpMXCT9txxm5_0arG0xyuaZdSKqVgDdf1LMQn18xxr918sOVJXy9u_liOdwAPRoTQBjQJY2dnywyOPvnxXB6t9M-GCNbBSPYELWrFunQMeav_Al2pmET6blYI-u5a5p119rIefB7tT-syyKHL9Us61mB7xtHWfLdCFQysAjkyMI_Uopz-pTPhDf9x1Vlc5Hqw_eMrrUgEUH21Tgcdw1LrUtWuZPw2Vu7t_Vb6pOqWbvwawu8wacv3imadx_Fm
' URL: http://www.plantuml.com/plantuml/uml/ZLJ1Rjim3BtxAmJaaY19aVLeT4KB5mjos30qmww38h6ELbao96heLdJVFig9RTdEi5q4K7oFf1v9tNda3aEbC_-iJCqThvZGtFjxHASE0M4dhDchNy0ssL59O48veI7B6XIxbvNoNbbJ744yWxjchnbZirSAYqgyiQ_WrDFF7kKKqWsVUvcpFGO91XyuykiLmwC3VxIQ7DA6WuP5pWxMQk0cUslJ5JOu3u_mTCgpDho26CWfKqPRM3cq7KY5FcVAOBJNT2px8FEKls8fcwo4kuYy4l0JuUUB94EyB8YMN7R5RXsNi3CU74w5KSrz0xaWXiYJfwvO6M6dGdBsmohP9qbv9qsGlpm4Q5MCDmsT7lAHrpVjwtO6eGHt6_rATWBvuCQQZksovadmtxu6eRZ-x2obgRfEzyrhPKyhdPzJhjWeuOgbLfHzbYerxD1K5e9JGxOrZ_teQbpMXCT9txxm5_0arG0xyuaZdSKqVgDdf1LMQn18xxr918sOVJXy9u_liOdwAPRoTQBjQJY2dnywyOPvnxXB6t9M-GCNbBSPYELWrFunQMeav_Al2pmET6blYI-u5a5p119rIefB7tT-syyKHL9Us61mB7xtHWfLdCFQysAjkyMI_Uopz-pTPhDf9x1Vlc5Hqw_eMrrUgEUH21Tgcdw1LrUtWuZPw2Vu7t_Vb6pOqWbvwawu8wacv3imadx_Fm
' Generated on: 2026-03-14T11:17:12.924633300

@startuml
skinparam classAttributeIconSize 0
hide circle

class AdmissionChecker2 {
  #{static} VerifyAdmissionCriteria(sd: StudentData2, threshold: double): boolean
}

class CourseRef2 {
  -name: String
  -code: String
  -credits: int
  --
  +CourseRef2(name: String, code: String, credits: int)
  +getName(): String
  +getCode(): String
}

class GradeInserter2 {
  #{static} insertGrade(sd: StudentData2, c: CourseRef2, grade: int): void
}

class StudentData2 {
  -taxDue: double
  -grades: Map<String, Integer>
  -id: int
  -surname: String
  -name: String
  -gpa: double
  ~specialProgramAdmission: boolean
  --
  +StudentData2(id: int, surname: String, name: String)
  #insertGrade(code: String, grade: int): void
  #getGpa(): double
  +print(): String
  +getTaxesDue(): double
  #setTaxesDue(d: double): void
  #getGrades(): Collection<Integer>
  #getSubjectsGrades(): Map<String,Integer>
  #setAdmissionStatus(b: boolean): void
  #getAdmissionStatus(): boolean
}

class StudentFacade {
  +insertGrade(s: StudentData2, c: CourseRef2, i: int): void
  +VerifyAdmissionCriteria(s: StudentData2, d: double): boolean
  +calculateTax(s: StudentData2, threholdGpa: double, discount: double): void
}

class TaxCalculator2 {
  -{static} due: double = 1000
  --
  #{static} calculateTax(sd: StudentData2, t_pga: double, discountRate: double): void
}

AdmissionChecker2 ..> StudentData2
GradeInserter2 ..> StudentData2
GradeInserter2 ..> CourseRef2
StudentFacade ..> StudentData2
StudentFacade ..> CourseRef2
TaxCalculator2 ..> StudentData2
@enduml